Fixed following issues: 1. File name and class name should be same but file name is UserMetaManagement.php but class name is UMMUserMetaManagement.php. 2. At so many places we are checking values and showing --,  we can write one function and call that function. Line no: 106, 107, 108. 3. Parsetemplate function can be private, but public specifier is used. 4. We are not loading errors from constants file. Line no: 185, 188. 5. $id is not correct name. Line no: 101. 6. Functions should have multi line comments not single line comments. Line no: 38 in UserMetaManagement.php file. 7. ‘--’ should come from constants. Line no: 106 in UserMetaManagement.php file. 8. No need of else block.  User array can be declared above if condition. Line no: 114 in UserMetaManagement.php file. 9. Not using trim while updating meta value, updating meta value even if only space is added after the value. Line no: 82 in script.js. 10. $('#UMMUserMetaInformation tr') is declared so many times instead of declaring once and assigning to a variable. Line no: 76 in script.js. 11. No time out for ajax call. Line no: 232 in script.js. 12. We can remove console.log. Line no: 247, 129 in script.js. 13. Previous and Next links are not vertical center aligned. 14. When meta value is empty then we are showing -- in table, that is fine but we are showing same in the update dialog, I have to manually erase that and enter the value. 15. When we click on update button without changing values,  then nothing to update dialog is appearing and user meta window is getting closed, I think user meta window should not get closed. 16. Update and delete buttons are not vertically center aligned. 17. ‘There are no users with the specified meta combination.’ text should be center aligned. 18. Scripts can be loaded in footer. Line no: 53 in UserMetaManagement.php file. 19. $_POST is accessed directly. Line no: 178, 206 in UserMetaManagement.php file. 20. No refresh browser cache function. 21. Users mail can have mailt

--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,34 @@
     cursor:pointer;
 }
 .btn-space{
-    margin-top:10px;
+    margin-top: 18px;
     text-align: center;
 }
 .dataTables_length, .paging_simple_numbers{
     display: inline-block;
     float: right;
-    margin-top: 15px !important;;
+}
+div.dataTables_paginate {
+    margin-top: 5px !important;
+    margin-right: 20px;
+}
+.umm-meta-results .umm-table {
+    padding-bottom: 20px;	   
+}
+#UMMUsersMeta.dataTable td.dataTables_empty {
+    text-align: center;    
+}
+.umm-meta-form .form-inline .form-group {
+    margin-right: 10px;
+}
+.umm-user-id {
+    cursor: pointer;
+}
+#UMMDialogForm {
+    height: 486px !important;
+}
+#UMMUserMetaInformation tbody tr td:first-child {
+    text-align: center;
 }
 .dataTables_length{
     margin-right:10px;
@@ -241,7 +262,7 @@ input[type="submit"], input[type="button"], button {
 }
 .dialog-form-header {
     padding-top: 10px;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
 .umm-dialog-alert .dialog-form-header .ui-dialog-titlebar-close {
     padding-top: 9px;
@@ -278,10 +299,15 @@ input[type="submit"], input[type="button"], button {
     padding-right: 0;
     padding-left: 8px;
 }
-@media (max-width: 767px) {     
+.umm-btn-group {
+    text-align: right;
+    display: inline-block;
+}
+@media (max-width: 991px) {     
     .umm-meta-form input[type="submit"] {
 	display: block;
 	float: right;
+	margin-right: 10px;
     }
     .umm-meta-form .form-inline .form-group {
 	display: block;
@@ -291,10 +317,15 @@ input[type="submit"], input[type="button"], button {
 	float: right;
 	margin-bottom: 10px;
     }
-    .umm-meta-form .form-group, .umm-meta-form input[type="submit"] {
+    .umm-meta-form .form-group {
 	clear: both;
     }
     .umm-meta-results {
 	padding-top: 3em;
+    }
+    .umm-btn-group {
+	display: inline-block;
+        float: right;
+        clear: both;
     }
 }
